--- a/pom.xml
+++ b/pom.xml
@@ -35,5 +35,8 @@
 		<module>chapter03</module>
 		<module>chapter04</module>
 		<module>network</module>
+		<module>practice01</module>
+		<module>practice02</module>
+		<module>practice03</module>
 	</modules>
 </project>
